--- a/csharpdev/Venezia/Views/Shared/Components/Menu/Default.cshtml
+++ b/csharpdev/Venezia/Views/Shared/Components/Menu/Default.cshtml
@@ -8,5 +8,6 @@
         <a class="p-2 text-dark" asp-route="BasketUrl">Mon panier</a>
         <a class="p-2 text-dark" asp-route="RouteAbout">A propos</a>
     </nav>
-    <a class="btn btn-outline-primary" href="#">Sign up</a>
+    <a class="btn btn-outline-primary" asp-route="LoginUrl">Connexion</a>
+    @*<a class="btn btn-outline-primary" href="#">Sign up</a>*@
 </div>
