--- a/csharpdev/Venezia/Views/Shared/Components/Menu/Default.cshtml
+++ b/csharpdev/Venezia/Views/Shared/Components/Menu/Default.cshtml
@@ -8,4 +8,5 @@
         <a class="p-2 text-dark" asp-route="BasketUrl">Mon panier</a>
         <a class="p-2 text-dark" asp-route="RouteAbout">A propos</a>
     </nav>
+    <partial name="_LoginPartial" />
 </div>
